--- a/day11/numpy.ipynb
+++ b/day11/numpy.ipynb
@@ -2538,6 +2538,588 @@
     }
    ],
    "execution_count": 126
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:16:46.859161300Z",
+     "start_time": "2026-01-17T02:16:46.792817500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "# ----------练习： 处理数组中nan\n",
+    "t = np.arange(24).reshape(4, 6).astype('float')\n",
+    "#\n",
+    "# 将数组中的一部分替换nan\n",
+    "t[1, 3:] = np.nan\n",
+    "print(t)\n",
+    "print('-------------------')\n",
+    "print(t.shape)\n",
+    "print(id(t))"
+   ],
+   "id": "dc5cd2d4dd0f31c3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  2.  3.  4.  5.]\n",
+      " [ 6.  7.  8. nan nan nan]\n",
+      " [12. 13. 14. 15. 16. 17.]\n",
+      " [18. 19. 20. 21. 22. 23.]]\n",
+      "-------------------\n",
+      "(4, 6)\n",
+      "3152707142160\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:16:47.708905400Z",
+     "start_time": "2026-01-17T02:16:47.669423300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "t.shape[1]  #很长的一句代码，不理解，拆出来一部分来理解",
+   "id": "fc5e324cbf5ed13e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:16:48.244564800Z",
+     "start_time": "2026-01-17T02:16:48.210274600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 遍历每一列，然后判断每一列是否有nan\n",
+    "for i in range(t.shape[1]):\n",
+    "    #获取当前列数据\n",
+    "    temp_col = t[:, i]\n",
+    "\n",
+    "    # 判断当前列的数据中是否含有nan\n",
+    "    nan_num = np.count_nonzero(temp_col != temp_col)\n",
+    "    # 条件成立说明含有nan\n",
+    "    if nan_num != 0:\n",
+    "        # 将这一列不为nan的数据拿出来,并计算平均值\n",
+    "        temp_col_not_nan = temp_col[temp_col == temp_col]\n",
+    "        print(temp_col_not_nan)\n",
+    "        # 将nan替换成这一列的平均值\n",
+    "        temp_col[np.isnan(temp_col)] = np.mean(temp_col_not_nan)\n",
+    "print('-'*50)\n",
+    "print(t)\n",
+    "print(id(t))"
+   ],
+   "id": "cfe4c724940a6b1d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3. 15. 21.]\n",
+      "[ 4. 16. 22.]\n",
+      "[ 5. 17. 23.]\n",
+      "--------------------------------------------------\n",
+      "[[ 0.  1.  2.  3.  4.  5.]\n",
+      " [ 6.  7.  8. 13. 14. 15.]\n",
+      " [12. 13. 14. 15. 16. 17.]\n",
+      " [18. 19. 20. 21. 22. 23.]]\n",
+      "3152707142160\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:21:13.991758200Z",
+     "start_time": "2026-01-17T02:21:13.924303400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(np.inf == np.inf)\n",
+    "np.inf"
+   ],
+   "id": "9fc344194ade9cdb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:21:26.713823900Z",
+     "start_time": "2026-01-17T02:21:26.673172300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.inf >-np.inf",
+   "id": "8374c9c358bdf0be",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:21:49.764826200Z",
+     "start_time": "2026-01-17T02:21:49.727451Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# np.nan和任何数据运算的结果都是nan\n",
+    "t = np.arange(24).reshape(4, 6).astype('float')\n",
+    "#\n",
+    "# 将数组中的一部分替换nan\n",
+    "t[1, 3:] = np.nan\n",
+    "\n",
+    "t1 = np.arange(24).reshape(4, 6).astype('float')\n",
+    "t + t1"
+   ],
+   "id": "24b53beee9273a35",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  2.,  4.,  6.,  8., 10.],\n",
+       "       [12., 14., 16., nan, nan, nan],\n",
+       "       [24., 26., 28., 30., 32., 34.],\n",
+       "       [36., 38., 40., 42., 44., 46.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:22:52.542405800Z",
+     "start_time": "2026-01-17T02:22:52.501223300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr = np.array([-1, 0])\n",
+    "print(arr)\n",
+    "print(arr[0] / arr[1])  #1除0就会得到inf"
+   ],
+   "id": "38e52a07f6b0a01",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  0]\n",
+      "-inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\WangZhiao\\AppData\\Local\\Temp\\ipykernel_15880\\2586930737.py:3: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  print(arr[0] / arr[1])  #1除0就会得到inf\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:23:06.258891300Z",
+     "start_time": "2026-01-17T02:23:06.216919400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.nan + np.inf",
+   "id": "e4827f2da2f93b74",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 转置和轴滚动",
+   "id": "e771185e352ae2c0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:23:41.000827800Z",
+     "start_time": "2026-01-17T02:23:40.946704300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#对换数组的维度\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(12).reshape(3, 4)\n",
+    "print('原数组：')\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('对换数组：')\n",
+    "print(np.transpose(a))\n",
+    "print(a)\n",
+    "\n",
+    "# 与transpose一致\n",
+    "a = np.arange(12).reshape(3, 4)\n",
+    "\n",
+    "print('原数组：')\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('转置数组：')\n",
+    "print(a.T)"
+   ],
+   "id": "182a8bda554d4d52",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "原数组：\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "\n",
+      "\n",
+      "对换数组：\n",
+      "[[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "原数组：\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "\n",
+      "\n",
+      "转置数组：\n",
+      "[[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:24:13.884324900Z",
+     "start_time": "2026-01-17T02:24:13.848316500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 函数用于交换数组的两个轴\n",
+    "t1 = np.arange(24).reshape(4, 6)\n",
+    "re1 = t1.swapaxes(1, 0)\n",
+    "\n",
+    "print(' 原 数 组 ：')\n",
+    "print(t1)\n",
+    "print('\\n')\n",
+    "print(re1.shape)\n",
+    "print('调用 swapaxes 函数后的数组：')\n",
+    "print(re1)"
+   ],
+   "id": "299ca27d43552f34",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 原 数 组 ：\n",
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]\n",
+      " [12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23]]\n",
+      "\n",
+      "\n",
+      "(6, 4)\n",
+      "调用 swapaxes 函数后的数组：\n",
+      "[[ 0  6 12 18]\n",
+      " [ 1  7 13 19]\n",
+      " [ 2  8 14 20]\n",
+      " [ 3  9 15 21]\n",
+      " [ 4 10 16 22]\n",
+      " [ 5 11 17 23]]\n"
+     ]
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:24:47.396935Z",
+     "start_time": "2026-01-17T02:24:47.357470700Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#如果是3维及以上，称为轴交换\n",
+    "t3 = np.arange(60).reshape(3, 4, 5)\n",
+    "print(t3.shape)\n",
+    "print('-' * 50)\n",
+    "t3 = np.swapaxes(t3, 1, 2)\n",
+    "print(t3.shape)\n",
+    "# print(t3) 数据不用记住，不用观察"
+   ],
+   "id": "8c60923dea3dd9a2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4, 5)\n",
+      "--------------------------------------------------\n",
+      "(3, 5, 4)\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:50:29.526261300Z",
+     "start_time": "2026-01-17T02:50:29.466082600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 数组的轴滚动,swapaxes每次只能交换两个轴，没有rollaxis方便，默认情况下轴滚动最前面\n",
+    "a = np.ones((3, 4, 5, 6))\n",
+    "# np.rollaxis(a, 2).shape\n",
+    "b = np.rollaxis(a, 3, 1)\n",
+    "print(b.shape)"
+   ],
+   "id": "f07b85cbf2cd8853",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6, 4, 5)\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T02:54:51.475608700Z",
+     "start_time": "2026-01-17T02:54:51.434314800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(b.shape)\n",
+    "c=np.rollaxis(b, 1, 4)  #轴会滚动，直到它位于此位置之前\n",
+    "print(c.shape)"
+   ],
+   "id": "108fa1cebd20ad76",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 6, 4, 5)\n",
+      "(3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T03:06:53.091153300Z",
+     "start_time": "2026-01-17T03:06:53.048110Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#数据拷贝，copy()和赋值的区别\n",
+    "b = np.array([[1, 2, 3], [1, 2, 3]])\n",
+    "a = b.copy()\n",
+    "a"
+   ],
+   "id": "736887b849bdbebd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T03:07:07.324761Z",
+     "start_time": "2026-01-17T03:07:07.264032800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "b[0, 0] = 3\n",
+    "print(b)\n",
+    "a"
+   ],
+   "id": "425ca796646bff4f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 2 3]\n",
+      " [1 2 3]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T03:07:16.233171300Z",
+     "start_time": "2026-01-17T03:07:16.131802800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#随机数生成\n",
+    "arr = np.random.rand(2, 3, 4)\n",
+    "print(arr)"
+   ],
+   "id": "e8922ed6e56bfff4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.49690383 0.90558817 0.76404799 0.93231923]\n",
+      "  [0.4261361  0.67667528 0.35799553 0.45907231]\n",
+      "  [0.22306848 0.1645065  0.5201915  0.61740037]]\n",
+      "\n",
+      " [[0.7371424  0.61627281 0.43934703 0.59558617]\n",
+      "  [0.64921745 0.56027313 0.02095031 0.75806483]\n",
+      "  [0.71652276 0.10721258 0.55234299 0.54394369]]]\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-17T03:07:39.816489Z",
+     "start_time": "2026-01-17T03:07:39.792277500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "names = 'zhangsan,lisi,wangwu,zhaoliu,sunqi'\n",
+    "#写入文件\n",
+    "with open('names.csv', 'w') as f:\n",
+    "    f.write(names)\n",
+    "    f.write('\\n')\n",
+    "    f.write('12,23,34,45,56')"
+   ],
+   "id": "7467b0aeb7494dd9",
+   "outputs": [],
+   "execution_count": 36
   }
  ],
  "metadata": {
